Download link was changed.

--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,7 @@
 		<div class="section section-8 center">
 			<div class="inner" >
 				<h2>Want to try?</h2>
-				<a class="button" href="files/Alex-Rudol_CV.pdf" target="_blank" >Download this template</a>
+				<a class="button" href="https://github.com/AlexRudol/template-landing/archive/master.zip" target="_blank" >Download this template</a>
 				<p class="small" >350 kb&nbsp; | &nbsp;zip</p>
 			</div>
 		</div>
