Updated styles: colors, margins.

--- a/index.htm
+++ b/index.htm
@@ -23,23 +23,23 @@
 
 	<body>
 
-		<div class="section section-1">
+		<div class="section section-1 white-blue">
 			<div class="inner" >
 				<img class="logo" src="img/logo.png" />
-				<h1>Hi</h1>
+				<h1>&nbsp;</h1>
 				<h2>This is a Landing Page</h2>
 				<h3>It's a simple and lightweight landing page.<br/>
 					Using only jQuery and no other libraries.</h3>
 			</div>
 		</div>
 
-		<div class="section section-2 type-1 type-2 center">
+		<div class="section section-2 blue-white center">
 			<div class="inner" >
 				<h3>And it's responsive mobile-friendly layout!</h3>
 			</div>
 		</div>
 
-		<div class="section section-3 type-1">
+		<div class="section section-3 blue-white">
 			<div class="inner grid" >
 				<h2>How it's works</h2>
 				<div><h4>Base</h4>
@@ -58,14 +58,14 @@
 			<img class="back parallax" src="img/laptop.jpg" />
 		</div>
 
-		<div class="section section-4 type-1 type-5">
+		<div class="section section-4 green-white">
 			<div class="inner" >
 				<h2>Design</h2>
 				<h3>Clear Flat design</h3>
 			</div>
 		</div>
 
-		<div class="section section-5 type-1 type-3">
+		<div class="section section-5 blue-white">
 			<div class="inner" >
 				<h2>Animation</h2>
 				<h3>To top button, blocks, lists, texts</h3>
@@ -73,13 +73,13 @@
 			<img class="back parallax" src="img/notepads.jpg" />
 		</div>
 
-		<div class="section section-6 type-2 center">
+		<div class="section section-6 blue-white center">
 			<div class="inner" >
 				<h3>...and you can easly extend styles and animation!</h3>
 			</div>
 		</div>
 
-		<div class="section section-7 type-1 type-3">
+		<div class="section section-7 grey-white">
 			<div class="inner" >
 				<h2>What good this landing?</h2>
 				<ul class="classic" >
@@ -91,7 +91,7 @@
 			</div>
 		</div>
 
-		<div class="section section-8 center">
+		<div class="section section-8 white-blue center">
 			<div class="inner" >
 				<h2>Want to try?</h2>
 				<a class="button" href="https://github.com/AlexRudol/template-landing/archive/master.zip" target="_blank" >Download this template</a>
@@ -99,14 +99,14 @@
 			</div>
 		</div>
 
-		<div class="section section-9 type-1 type-5">
+		<div class="section section-9 green-white">
 			<div class="inner" >
 				<h2>Block links sample</h2>
 				<ul class="in-line img-wide" >
 					<li><a href="http://alexrudol.com" target="_blank" title="" ><h3>Blog</h3>
 						<img src="img/projects-blog.jpg" /></a>
 					</li>
-					<li><a href="http://alexrudol.com/en/color-fish" target="_blank" title="" ><h3>Themes and icons</h3>
+					<li><a href="http://alexrudol.com/en/projects/color-fish" target="_blank" title="" ><h3>Themes and icons</h3>
 						<img src="img/projects-themes.jpg" /></a>
 					</li>
 					<li><a href="https://github.com/alexrudol" target="_blank" title="" ><h3>Templates on GitHub</h3>
@@ -116,7 +116,7 @@
 			</div>
 		</div>
 
-		<div class="section section-10 type-4">
+		<div class="section section-10 white-green">
 			<div class="inner" >
 				<h2>Inline compact images</h2>
 				<ul class="in-line img-compact" >
@@ -136,7 +136,7 @@
 			</div>
 		</div>
 
-		<div class="section section-11 type-1">
+		<div class="section section-11 grey-white">
 			<div class="inner" >
 				<h2>Social</h2>
 				<ul class="in-line" >
@@ -145,8 +145,9 @@
 					<li><a class="linkedin button-circle" href="https://www.linkedin.com/in/alexrudol" target="_blank" title="LinkedIn" >LinkedIn</a></li>
 					<li><a class="facebook button-circle" href="https://facebook.com/alex.rudol" target="_blank" title="Facebook" >Facebook</a></li>
 					<li><a class="google button-circle" href="https://plus.google.com/+AlexRudol1" target="_blank" title="Google+" >Google+</a></li>
+					<li><a class="github button-circle" href="https://github.com/AlexRudol" target="_blank" title="GitHub" >GitHub</a></li>
 				</ul>
-				<p class="small center" >Created by Alex Rudol &nbsp; | &nbsp; 2016</p>
+				<p class="small center" >Created by <a href="http://alexrudol.com" target="_blank" title="My personal website" >Alex Rudol</a> &nbsp; | &nbsp; 2016</p>
 			</div>
 		</div>
 
